--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,5 @@
   "buildCommand": "cd docs && npm install && npm run build",
   "outputDirectory": "docs/build",
   "devCommand": "cd docs && npm run start",
-  "installCommand": "cd docs && npm install",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "installCommand": "cd docs && npm install"
 }
